# vpn_pro

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py
app/bot/: __init__.py  main.py
app/bot/handlers/: __init__.py  admin.py  help.py  key_management.py
app/bot/keyboards/: __init__.py  inline.py
app/bot/middlewares/: __init__.py  admin.py
app/bot/services/: __init__.py  limiter.py  scheduler.py  xray.py
app/models/: __init__.py  key.py  user.py
docker/: Dockerfile.bot  Dockerfile.postgres  init.sql
docker/xray/: config.json
docs/: architecture.md  bot_flow.md  setup.md  testing.md  xray_config.md
migrations/: 001_add_device_limit.sql
scripts/: setup_server.sh  setup_ubuntu22.sh  setup_ubuntu24.sh
tests/: test_admin_access.py  test_create_key.py  test_db_connection.py  test_db_utils.py  test_expiration.py  test_full_flow.py  test_help_command.py  test_key_handlers.py  test_limiter.py  test_main.py  test_remove_key.py  test_start_command.py
